--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
 							Здесь где-то.2</li>
 						<li class="listone">
 							Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.Я текст. Здесь какой-то текст. Текст.
-							Текст
-							Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.Я текст. Здесь какой-то
-							текст.
-							Текст. Текст Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.3</li>
+							Текст Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.Я текст. Здесь какой-то
+							текст.Текст. Текст Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.3
+						</li>
 						<ul class="listtwos">
 							<li class="listtwo">Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.Я текст. Здесь
 								какой-то текст. Текст.
@@ -172,7 +171,8 @@
 
 						<li class="listone">Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.Я текст. Здесь какой-то
 							текст. Текст. Текст
-							Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.4</li>
+							Здесь где-то.Я текст. Здесь какой-то текст. Текст. Текст Здесь где-то.4
+						</li>
 					</ul>
 				</div>
 				<!-- 
@@ -213,6 +213,7 @@
 						<div class="textcartwo">Top notch service is our main auto motive</div>
 					</div>
 				</div>
+			</div>
 		</main>
 		<footer hidden class="footer"></footer>
 	</div>
